--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -1,22 +1,46 @@
 % \href{/media/Mark_Redd_Resume_Printable.pdf}{\textbf{Printable CV}}
 
-\hypertarget{mark-edward-redd}{%
-\section{Mark Edward Redd}\label{mark-edward-redd}}
+\section{Mark Edward Redd}\label{mark-edward-redd}
 
 \href{mailto:redddogjr@gmail.com}{\nolinkurl{redddogjr@gmail.com}}
-\textbar{} 552 N 800 W, Provo, UT, 84601 \textbar{} (435) 760-9452
+\textbar{} 100 W Hackberry Dr., Chandler AZ, 85248 \textbar{} (435)
+760-9452
 
 % \href{https://www.linkedin.com/in/mark-redd-53878880/}{LinkedIn},
 % \href{https://github.com/flythereddflagg}{GitHub}
 
-\hypertarget{experience}{%
-\subsection{Experience}\label{experience}}
+\subsection{Experience}\label{experience}
 
-\hypertarget{phd-researcher}{%
-\subsubsection{PhD Researcher}\label{phd-researcher}}
+\subsubsection{R\&D Substrate Packaging
+Engineer}\label{rd-substrate-packaging-engineer}
+
+\emph{Intel Corporation, Chandler, AZ, USA \textbar{} May 2022 -
+Present}
+
+\begin{itemize}
+\tightlist
+\item
+  Tool and process owner for multiple acid cleaning and copper etch
+  lithography tools
+\item
+  Directed processing, troubleshooting, maintenance, and qualification
+  work on lithography tools
+\item
+  Implemented improved safety protocols and standard operating
+  procedures for work with associated corrosive process chemistries
+\item
+  Conducted experimental studies to improve process control for copper
+  etching
+\item
+  Increased yield by designing and implementing procedures for bench
+  scale processing, which removed defects and improved consistency of
+  processed material
+\end{itemize}
+
+\subsubsection{PhD Researcher}\label{phd-researcher}
 
 \emph{Brigham Young University, Provo, UT, USA \textbar{} Advisor:
-Dr.~W. V. Wilding \textbar{} Jul 2016 -- Present}
+Dr.~W. V. Wilding \textbar{} Jul 2016 -- May 2022}
 
 \begin{itemize}
 \tightlist
@@ -51,8 +75,7 @@ Dr.~W. V. Wilding \textbar{} Jul 2016 -- Present}
   Design'' (3 times) and ``Numerical Methods''
 \end{itemize}
 
-\hypertarget{engineering-intern}{%
-\subsubsection{Engineering Intern}\label{engineering-intern}}
+\subsubsection{Engineering Intern}\label{engineering-intern}
 
 \emph{Sustainable Energy Solutions LLC, Orem, UT, USA \textbar{} May
 2014 -- Aug 2015}
@@ -72,9 +95,8 @@ Dr.~W. V. Wilding \textbar{} Jul 2016 -- Present}
   machining processes
 \end{itemize}
 
-\hypertarget{chemical-engineering-laboratory-assistant}{%
 \subsubsection{Chemical Engineering Laboratory
-Assistant}\label{chemical-engineering-laboratory-assistant}}
+Assistant}\label{chemical-engineering-laboratory-assistant}
 
 \emph{Brigham Young University, Provo, UT, USA \textbar{} Jun 2012 --
 May 2014}
@@ -95,28 +117,22 @@ May 2014}
   procedures
 \end{itemize}
 
-\hypertarget{education}{%
-\subsection{Education}\label{education}}
+\subsection{Education}\label{education}
 
-\hypertarget{brigham-young-university}{%
-\subsubsection{Brigham Young
-University}\label{brigham-young-university}}
+\subsubsection{Brigham Young University}\label{brigham-young-university}
 
 \emph{Doctor of Philosophy, Chemical Engineering \textbar{} Jul 2016 --
-2022}
+Jun 2022}
 
-\hypertarget{brigham-young-university-1}{%
 \subsubsection{Brigham Young
-University}\label{brigham-young-university-1}}
+University}\label{brigham-young-university-1}
 
 \emph{Bachelor of Science, Chemical Engineering \textbar{} Sep 2008 --
 Apr 2016}
 
-\hypertarget{skills-accomplishments}{%
-\subsection{Skills \& Accomplishments}\label{skills-accomplishments}}
+\subsection{Skills \& Accomplishments}\label{skills-accomplishments}
 
-\hypertarget{industrial}{%
-\subsubsection{Industrial}\label{industrial}}
+\subsubsection{Industrial}\label{industrial}
 
 \begin{itemize}
 \tightlist
@@ -134,49 +150,53 @@ Apr 2016}
   Electronics soldering and wiring
 \end{itemize}
 
-\hypertarget{programming}{%
-\subsubsection{Programming}\label{programming}}
+\subsubsection{Programming}\label{programming}
 
 \begin{itemize}
 \tightlist
 \item
-  Experience with C/C++, C\#, FORTRAN, Java, JavaScript/HTML/CSS,
-  MATLAB, Python, SQL, Microsoft VBA
+  C/C++, C\#, FORTRAN, Java, JavaScript/HTML/CSS, MATLAB, Python, SQL,
+  Microsoft VBA
 \item
   Implemented and published the open-source
   \href{https://github.com/flythereddflagg/lpfgopt}{Leapfrogging
   Algorithm} with library wrappers for C, C++ and Python
 \item
-  Wrote an open-source introductory
+  Wrote an open-licensed introductory
   \href{https://flythereddflagg.github.io/python_book/site/index.html}{book
   on Python and computer science}
 \end{itemize}
 
-\hypertarget{software-platforms}{%
-\subsubsection{Software / Platforms}\label{software-platforms}}
+\subsubsection{Software / Platforms}\label{software-platforms}
 
 \begin{itemize}
 \tightlist
 \item
-  Experience with Arduino, Autodesk Inventor, GCC and GNU Build Tools,
-  Git, Linux, MathCAD, MATLAB/Simulink, Microsoft Office, Raspberry Pi,
-  SQLite, Microsoft SQL Server
+  Arduino, Autodesk Inventor, GCC and GNU Build Tools, Git, Linux,
+  MathCAD, MATLAB/Simulink, Microsoft Office, Raspberry Pi, Solidworks,
+  SQLite, SQL Pathfinder, Microsoft SQL Server
 \item
   Built custom data acquisition and analysis hardware and corresponding
   software using Arduino and other open-source platforms
 \end{itemize}
 
-\hypertarget{publications}{%
-\subsection{Publications}\label{publications}}
+\subsection{Publications}\label{publications}
 
 % https://orcid.org/0000-0001-7269-2155
 
 \begin{itemize}
 \item
-  Mark E. Redd, Cassandra Guffey, Ethan Gustafson, Elizabeth Hart,
-  Keturah McQuade, Neil F. Giles, Thomas A. Knotts IV, W. Vincent
-  Wilding, \emph{Autoignition Temperature Trends for Various Chemical
-  Families} (in preparation)
+  Cassandra J. Guffey, Mark E. Redd, Neil F. Giles, Thomas A. Knotts IV,
+  W. Vincent Wilding, \emph{Radical Isomerization and Volatility
+  Considerations for Improved Autoignition Temperature Prediction} (in
+  preparation)
+\item
+  Mark E. Redd, Cassandra J. Guffey, Ethan L. Gustafson, Elizabeth H.
+  Hart, Keturah S. McQuade, Neil F. Giles, Thomas A. Knotts IV, W.
+  Vincent Wilding, \emph{Autoignition temperature trends for various
+  chemical families}, Fuel \textbf{2024} 355, 129321.
+  \href{https://doi.org/10.1016/j.fuel.2023.129321}{DOI:
+  10.1016/j.fuel.2023.129321}
 \item
   Mark E. Redd, W. Glenn Seaton, Neil F. Giles, Thomas A. Knotts,W.
   Vincent Wilding, \emph{An improved method for predicting autoignition
@@ -198,8 +218,7 @@ Apr 2016}
   10.1021/acs.jced.0c00641}
 \end{itemize}
 
-\hypertarget{presentations}{%
-\subsection{Presentations}\label{presentations}}
+\subsection{Presentations}\label{presentations}
 
 \begin{itemize}
 \tightlist
