added more for PA

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -117,6 +117,23 @@ May 2014}
   procedures
 \end{itemize}
 
+\subsubsection{Full-time Volunteer
+Missionary}\label{full-time-volunteer-missionary}
+
+\emph{The Church of Jesus Christ of Latter-day Saints, Salta, Argentina
+\textbar{} Sep 2009 -- Sep 2011}
+
+\begin{itemize}
+\tightlist
+\item
+  Taught gospel topics and personally interacted with 100+ individuals
+  on a daily basis
+\item
+  Organized and participated in community service events
+\item
+  Trained 2 new missionaries
+\end{itemize}
+
 \subsection{Education}\label{education}
 
 \subsubsection{Brigham Young University}\label{brigham-young-university}
