--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -3,8 +3,7 @@
 \section{Mark Edward Redd}\label{mark-edward-redd}
 
 \href{mailto:redddogjr@gmail.com}{\nolinkurl{redddogjr@gmail.com}}
-\textbar{} 100 W Hackberry Dr., Chandler AZ, 85248 \textbar{} (435)
-760-9452
+\textbar{} 613 W Park Ave., Chandler AZ, 85225 \textbar{} (435) 760-9452
 
 % \href{https://www.linkedin.com/in/mark-redd-53878880/}{LinkedIn},
 % \href{https://github.com/flythereddflagg}{GitHub}
@@ -20,8 +19,8 @@ Present}
 \begin{itemize}
 \tightlist
 \item
-  Tool and process owner for multiple acid cleaning and copper etch
-  lithography tools
+  Tool and process owner for multiple acid cleaning, copper etch, and
+  develop lithography tools
 \item
   Directed processing, troubleshooting, maintenance, and qualification
   work on lithography tools
@@ -35,6 +34,9 @@ Present}
   Increased yield by designing and implementing procedures for bench
   scale processing, which removed defects and improved consistency of
   processed material
+\item
+  Implemented several automations using JavaScript and Python to ensure
+  tool health, quality and responsiveness to emergent tool issues
 \end{itemize}
 
 \subsubsection{PhD Researcher}\label{phd-researcher}
@@ -172,8 +174,7 @@ Apr 2016}
 \begin{itemize}
 \tightlist
 \item
-  C/C++, C\#, FORTRAN, Java, JavaScript/HTML/CSS, MATLAB, Python, SQL,
-  Microsoft VBA
+  C/C++, FORTRAN, JavaScript/HTML, MATLAB, Python, SQL, Microsoft VBA
 \item
   Implemented and published the open-source
   \href{https://github.com/flythereddflagg/lpfgopt}{Leapfrogging
@@ -205,8 +206,8 @@ Apr 2016}
 \item
   Cassandra J. Guffey, Mark E. Redd, Neil F. Giles, Thomas A. Knotts IV,
   W. Vincent Wilding, \emph{Radical Isomerization and Volatility
-  Considerations for Improved Autoignition Temperature Prediction} (in
-  preparation)
+  Considerations for Improved Autoignition Temperature Prediction}
+  (under review)
 \item
   Mark E. Redd, Cassandra J. Guffey, Ethan L. Gustafson, Elizabeth H.
   Hart, Keturah S. McQuade, Neil F. Giles, Thomas A. Knotts IV, W.
