added profile pic.

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -1,5 +1,11 @@
 % \href{/media/Mark_Redd_Resume_Printable.pdf}{\textbf{Printable CV}}
 
+% \begin{figure}
+% \centering
+% \pandocbounded{\includegraphics[keepaspectratio]{assets/profile_pic.png}}
+% \caption{Profile Pic}
+% \end{figure}
+
 \section{Mark Edward Redd}\label{mark-edward-redd}
 
 \href{mailto:redddogjr@gmail.com}{\nolinkurl{redddogjr@gmail.com}}
