added latest publication to CV

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -210,10 +210,12 @@ Apr 2016}
 
 \begin{itemize}
 \item
-  Cassandra J. Guffey, Mark E. Redd, Neil F. Giles, Thomas A. Knotts IV,
-  W. Vincent Wilding, \emph{Radical Isomerization and Volatility
-  Considerations for Improved Autoignition Temperature Prediction}
-  (under review)
+  Cassandra J. Guffey, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, W.
+  Vincent Wilding, \emph{Radical isomerization and volatility
+  considerations for improved autoignition temperature prediction}, Fuel
+  \textbf{2025} 393,135016.
+  \href{https://doi.org/10.1016/j.fuel.2025.135016}{DOI:
+  10.1016/j.fuel.2025.135016}
 \item
   Mark E. Redd, Cassandra J. Guffey, Ethan L. Gustafson, Elizabeth H.
   Hart, Keturah S. McQuade, Neil F. Giles, Thomas A. Knotts IV, W.
