updated profile pic

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -1,12 +1,7 @@
 % \href{/media/Mark_Redd_Resume_Printable.pdf}{\textbf{Printable CV}}
 
-% \begin{figure}
-% \centering
-% \pandocbounded{\includegraphics[keepaspectratio]{assets/profile_pic.png}}
-% \caption{Profile Pic}
-% \end{figure}
-
-\section{Mark Edward Redd}\label{mark-edward-redd}
+\hypertarget{mark-edward-redd}{%
+\section{Mark Edward Redd}\label{mark-edward-redd}}
 
 \href{mailto:redddogjr@gmail.com}{\nolinkurl{redddogjr@gmail.com}}
 \textbar{} 613 W Park Ave., Chandler AZ, 85225 \textbar{} (435) 760-9452
@@ -14,10 +9,12 @@
 % \href{https://www.linkedin.com/in/mark-redd-53878880/}{LinkedIn},
 % \href{https://github.com/flythereddflagg}{GitHub}
 
-\subsection{Experience}\label{experience}
+\hypertarget{experience}{%
+\subsection{Experience}\label{experience}}
 
+\hypertarget{rd-substrate-packaging-engineer}{%
 \subsubsection{R\&D Substrate Packaging
-Engineer}\label{rd-substrate-packaging-engineer}
+Engineer}\label{rd-substrate-packaging-engineer}}
 
 \emph{Intel Corporation, Chandler, AZ, USA \textbar{} May 2022 -
 Present}
@@ -45,7 +42,8 @@ Present}
   tool health, quality and responsiveness to emergent tool issues
 \end{itemize}
 
-\subsubsection{PhD Researcher}\label{phd-researcher}
+\hypertarget{phd-researcher}{%
+\subsubsection{PhD Researcher}\label{phd-researcher}}
 
 \emph{Brigham Young University, Provo, UT, USA \textbar{} Advisor:
 Dr.~W. V. Wilding \textbar{} Jul 2016 -- May 2022}
@@ -83,7 +81,8 @@ Dr.~W. V. Wilding \textbar{} Jul 2016 -- May 2022}
   Design'' (3 times) and ``Numerical Methods''
 \end{itemize}
 
-\subsubsection{Engineering Intern}\label{engineering-intern}
+\hypertarget{engineering-intern}{%
+\subsubsection{Engineering Intern}\label{engineering-intern}}
 
 \emph{Sustainable Energy Solutions LLC, Orem, UT, USA \textbar{} May
 2014 -- Aug 2015}
@@ -103,8 +102,9 @@ Dr.~W. V. Wilding \textbar{} Jul 2016 -- May 2022}
   machining processes
 \end{itemize}
 
+\hypertarget{chemical-engineering-laboratory-assistant}{%
 \subsubsection{Chemical Engineering Laboratory
-Assistant}\label{chemical-engineering-laboratory-assistant}
+Assistant}\label{chemical-engineering-laboratory-assistant}}
 
 \emph{Brigham Young University, Provo, UT, USA \textbar{} Jun 2012 --
 May 2014}
@@ -125,8 +125,9 @@ May 2014}
   procedures
 \end{itemize}
 
+\hypertarget{full-time-volunteer-missionary}{%
 \subsubsection{Full-time Volunteer
-Missionary}\label{full-time-volunteer-missionary}
+Missionary}\label{full-time-volunteer-missionary}}
 
 \emph{The Church of Jesus Christ of Latter-day Saints, Salta, Argentina
 \textbar{} Sep 2009 -- Sep 2011}
@@ -142,22 +143,28 @@ Missionary}\label{full-time-volunteer-missionary}
   Trained 2 new missionaries
 \end{itemize}
 
-\subsection{Education}\label{education}
+\hypertarget{education}{%
+\subsection{Education}\label{education}}
 
-\subsubsection{Brigham Young University}\label{brigham-young-university}
+\hypertarget{brigham-young-university}{%
+\subsubsection{Brigham Young
+University}\label{brigham-young-university}}
 
 \emph{Doctor of Philosophy, Chemical Engineering \textbar{} Jul 2016 --
 Jun 2022}
 
+\hypertarget{brigham-young-university-1}{%
 \subsubsection{Brigham Young
-University}\label{brigham-young-university-1}
+University}\label{brigham-young-university-1}}
 
 \emph{Bachelor of Science, Chemical Engineering \textbar{} Sep 2008 --
 Apr 2016}
 
-\subsection{Skills \& Accomplishments}\label{skills-accomplishments}
+\hypertarget{skills-accomplishments}{%
+\subsection{Skills \& Accomplishments}\label{skills-accomplishments}}
 
-\subsubsection{Industrial}\label{industrial}
+\hypertarget{industrial}{%
+\subsubsection{Industrial}\label{industrial}}
 
 \begin{itemize}
 \tightlist
@@ -175,7 +182,8 @@ Apr 2016}
   Electronics soldering and wiring
 \end{itemize}
 
-\subsubsection{Programming}\label{programming}
+\hypertarget{programming}{%
+\subsubsection{Programming}\label{programming}}
 
 \begin{itemize}
 \tightlist
@@ -191,7 +199,8 @@ Apr 2016}
   on Python and computer science}
 \end{itemize}
 
-\subsubsection{Software / Platforms}\label{software-platforms}
+\hypertarget{software-platforms}{%
+\subsubsection{Software / Platforms}\label{software-platforms}}
 
 \begin{itemize}
 \tightlist
@@ -204,7 +213,8 @@ Apr 2016}
   software using Arduino and other open-source platforms
 \end{itemize}
 
-\subsection{Publications}\label{publications}
+\hypertarget{publications}{%
+\subsection{Publications}\label{publications}}
 
 % https://orcid.org/0000-0001-7269-2155
 
@@ -244,7 +254,8 @@ Apr 2016}
   10.1021/acs.jced.0c00641}
 \end{itemize}
 
-\subsection{Presentations}\label{presentations}
+\hypertarget{presentations}{%
+\subsection{Presentations}\label{presentations}}
 
 \begin{itemize}
 \tightlist
